Modification for the controller declaration
use the .controller method of your Angular module for application
instead of declaring controller as function.

--- a/ProgressBarSample/Index.html
+++ b/ProgressBarSample/Index.html
@@ -5,7 +5,7 @@
     <title>Progress Bar Demo</title>
 </head>
 
-<body ng-app>
+<body ng-app="progressBarApp">
 <div class="ProgressBar" ng-controller="ProgressBarCtrl">
     <h1>Progress Bars Demo</h1>
 	<div ng-repeat="item in progressBarData">
